# ospd-openvas

./: .coveragerc  .dockerignore  .gitignore  .mergify.yml  .pylintrc  CHANGELOG.md  CHANGES  ChangeLog  INSTALL  MANIFEST.in  Pipfile  README  README.md  RELEASE.md  openvas.conf  pyproject.toml  redis-openvas.conf  setup.py  tox.ini
.circleci/: config.yml
.docker/: entrypoint.sh  main.Dockerfile  prod.Dockerfile  stable.Dockerfile
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  install-openvas-smb-dependencies.sh
.github/ISSUE_TEMPLATE/: bug-report.md
.github/workflows/: ci-python.yml  codeql-analysis-python.yml  container.yml  deploy-pypi.yml  push.yml  release-pontos-manually.yml  release-pontos-patch.yml  release-pontos.yml  release.yml  smoketests.yml  update-header.yml
RELICENSE/: README.md
RELICENSE/template/: template.txt
changelog/: v21.4.4.md  v22.4.0.md  v22.4.1.md  v22.4.2.md  v22.4.3.md  v22.4.4.md  v22.4.5.md  v22.4.6.md
config/: ospd-openvas.conf  ospd-openvas.default  ospd-openvas.service  ospd.conf
doc/: HTML.xsl  INSTALL-ospd-scanner  INSTALL-ospd-scanner.md  OSP.xml  USAGE-ospd-scanner  examle_ospd.conf  examle_ospd_log.conf  generate  rnc.xsl
docs/: HTML.xsl  INSTALL-ospd-scanner.md  OSP.xml  USAGE-ospd-scanner.md  example-ospd-logging.conf  example-ospd.conf  generate  ospd-openvas.8  rnc.xsl
ospd/: __init__.py  __version__.py  config.py  cvss.py  datapickler.py  error.py  errors.py  logger.py  main.py  misc.py  network.py  ospd.py  ospd_ssh.py  parser.py  protocol.py  resultlist.py  scan.py  server.py  timer.py  vtfilter.py  vts.py  win_socket.py  xml.py  xmlvt.py
ospd/command/: __init__.py  command.py  initsubclass.py  registry.py
ospd/doc/: HTML.xsl  OSP.xml
ospd_all/: CHANGELOG.md  MANIFEST.in  README.md
ospd_all/.github/workflows/: release-pontos-patch.yml
ospd_all/doc/: OSP.xml  USAGE-ospd-scanner.md
ospd_all/ospd/: __version__.py  datapickler.py  ospd_ssh.py  scan.py  vtfilter.py
ospd_all/ospd/command/: __init__.py  command.py  registry.py
ospd_all/tests/: helper.py  test_argument_parser.py  test_port_convert.py  test_ssh_daemon.py
ospd_all/tests/command/: test_commands.py
ospd_openvas/: __init__.py  __version__.py  daemon.py  db.py  dryrun.py  errors.py  feed.py  gpg_sha_verifier.py  lock.py  mqtt.py  notus.py  nvticache.py  openvas.py  openvas_db.py  preferencehandler.py  vthelper.py  wrapper.py
ospd_openvas/messages/: __init__.py  message.py  result.py  status.py
ospd_openvas/messaging/: __init__.py  mqtt.py  publisher.py  subscriber.py
ospd_openvas/notus/: __init__.py  metadata.py  translationtable.py
ospd_repo/: .gitignore  CHANGELOG.md  README.md  RELEASE.md
ospd_repo/.github/workflows/: codeql-analysis-python.yml
ospd_repo/doc/: INSTALL-ospd-scanner  USAGE-ospd-scanner
ospd_repo/ospd/: datapickler.py  main.py  ospd.py  parser.py  protocol.py  resultlist.py  scan.py
ospd_repo/ospd/command/: command.py
ospd_repo/tests/: test_datapickler.py  test_scan_and_result.py
ospd_repo/tests/command/: test_command.py
ospdrepo/: CHANGELOG.md  README.md
ospdrepo/.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
ospdrepo/ospd/: __version__.py  config.py  datapickler.py  timer.py
ospdrepo/tests/: helper.py  test_errors.py  test_protocol.py  test_target_convert.py
ospdrepo/tests/command/: test_commands.py
smoketest/: Dockerfile  Makefile  README.md  gatherpackagelist-c18bb781-3740-44c2-aa01-1b73a00066e8.xml  go.mod  go.sum  gpg-key-definition  main.go  run  run-tests.sh
smoketest/cmd/feed-preparer/: main.go
smoketest/cmd/scans/: README.md  main.go
smoketest/cmd/test/: main.go
smoketest/connection/: cmd.go  init.go
smoketest/data/notus/advisories/: my test family.notus
smoketest/data/plugins/: add_host_name.nasl  keys.nasl  plugin_feed_info.inc  slowtest.nasl  test.nasl
smoketest/feed/: preparer.go
smoketest/file/: walker.go
smoketest/it/: vts_test.go
smoketest/mqtt/: mqtt.go
smoketest/nasl/: cache.go  parser.go
smoketest/notus/: notus.go
smoketest/policies/: cache.go  init.go
smoketest/scan/: init.go
smoketest/usecases/: init.go
smoketest/usecases/notus/: init.go  server.go
smoketest/usecases/policy/: init.go
smoketest/usecases/scan/: init.go
smoketest/vt/: vts.go
tests/: __init__.py  dummydaemon.py  dummywrapper.py  helper.py  testArgumentsParser.py  testCVSS.py  testDB.py  testNVTICache.py  testOSPDError.py  testPortConvert.py  testSSHDaemon.py  testScanAndResult.py  testTargetConvert.py  testWrapper.py  test_argument_parser.py  test_command.py  test_config.py  test_cvss.py  test_daemon.py  test_datapickler.py  test_db.py  test_error.py  test_errors.py  test_feed.py  test_gpg.py  test_lock.py  test_mqtt.py  test_notus.py  test_nvti_cache.py  test_openvas.py  test_port_convert.py  test_preferencehandler.py  test_protocol.py  test_scan_and_result.py  test_ssh_daemon.py  test_target_convert.py  test_vthelper.py  test_vts.py  test_wrapper.py  test_xml.py  (+1 more)
tests/command/: __init__.py  test_command.py  test_commands.py  test_registry.py
tests/messages/: __init__.py  test_message.py  test_result.py
tests/messaging/: __init__.py  test_mqtt.py
tests/notus/: example.csv  test_notus.py
wrappers/ovaldi/: ospd-ovaldi.py  remote-ovaldi-setup.sh  remote-ovaldi.sh
wrappers/ovaldi/doc/: remote-ovaldi-doc.txt
wrappers/ovaldi/sampledata/: defs.xml
wrappers/w3af/: ospd-w3af.py
